Issue 64 minibag enhancement (#31)
* Display scrollbars only when needed

* Don't be full height in desktop

* Add quantity dropdowns and style them

* Display promotions, update scrollbar styling

* Update styling of line items in cart

* Unify how minibag is displayed

* Fix console errors

* Update tests

* Fix minibag displaying

* Show the minibag even when empty

* Don't show line item subtotal when there are no promotions

--- a/src/scss/60_components/_c-coupon-form.scss
+++ b/src/scss/60_components/_c-coupon-form.scss
@@ -2,9 +2,7 @@
 @import '../20_tools/__all';
 
 .c-coupon-form {
-  @include breakpoint(desktop) {
-    margin-bottom: $global-spacing-unit-small;
-  }
+  margin-bottom: $global-spacing-unit-small;
 }
 
 .c-coupon-form__title {
